...
                .padding()
                .frame(height: height)
                .background(Color.blue)
                .foregroundColor(.white)
                .cornerRadius(10)

                Button("Resend") {
                    resend()
                }
                .padding()
                .frame(height: height)
                .background(Color.blue)
                .foregroundColor(.white)
...
