...
            .disabled(
                [model.email, model.password].contains(where: \.isEmpty) ||
                    (authOption == .signUp && !model.isValid)
            )
            .padding()
        }
        .alert("Check your email", isPresented: $checkEmailPresented, actions: { EmptyView() })
    }

    func submit() {
        isLoading = true
        Task {
            do {
...
